--- a/src/theme/common/mixin.scss
+++ b/src/theme/common/mixin.scss
@@ -2,7 +2,7 @@
   文本截取显示
   line-num: 显示文本的行数 默认一行
 */
-@mixin text-truncate($line-num: 1) {
+@mixin text-clip($line-num: 1) {
   word-break: break-all;
   display: -webkit-box;
   -webkit-box-orient: vertical;
