--- a/src/styles/global/reset.scss
+++ b/src/styles/global/reset.scss
@@ -1,4 +1,3 @@
-@import '../common/var.scss';
 * {
   margin: 0;
   padding: 0;
@@ -19,8 +18,5 @@ a {
   color: getColor(text-primary);
 }
 
-:root {
-  @each $name, $color in $colors {
-    --color-#{$name}: #{$color};
-  }
-}
+@import '../themes/base.scss';
+@import '../themes/dark.scss';
