--- a/src/styles/global/reset.scss
+++ b/src/styles/global/reset.scss
@@ -1,3 +1,5 @@
+@import '../index.scss';
+
 * {
   margin: 0;
   padding: 0;
@@ -11,6 +13,7 @@ body,
 
 #app {
   color: getColor(text-primary);
+  background-color: getColor(body-background);
 }
 
 a {
