--- a/src/styles/themes/base.scss
+++ b/src/styles/themes/base.scss
@@ -14,14 +14,15 @@ $colors: (
   border-light: #e4e7ed,
   border-lighter: #ebeef5,
   border-extra-light: #f2f6fc,
+  body-background: #ffffff,
   hover-background-b: rgba(0, 0, 0, 0.25),
   hover-background-w: rgba(255, 255, 255, 0.25),
   actionbar-menu: #ffffff,
   actionbar-menu-hover: #86e186,
   actionbar-menu-active: #0cc20c,
-  sidebar-menu: #303133,
+  sidebar-menu: #909399,
   sidebar-menu-hover: #86e186,
-  sidebar-menu-active: #0cc20c
+  sidebar-menu-active: #ffffff
 );
 
 :root {
