--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -6,22 +6,23 @@ $colors: (
   warning: #f5a623,
   danger: #f56c6c,
   info: #909399,
-  text-primary: #303133,
-  text-regular: #606266,
+  text-primary: #ffffff,
+  text-regular: #c0c4cc,
   text-secondary: #909399,
-  text-placeholder: #c0c4cc,
+  text-placeholder: #606266,
   border-base: #dcdfe6,
   border-light: #e4e7ed,
   border-lighter: #ebeef5,
   border-extra-light: #f2f6fc,
+  body-background: #303030,
   hover-background-b: rgba(0, 0, 0, 0.25),
   hover-background-w: rgba(255, 255, 255, 0.25),
   actionbar-menu: #ffffff,
   actionbar-menu-hover: #86e186,
   actionbar-menu-active: #0cc20c,
-  sidebar-menu: #303133,
+  sidebar-menu: #909399,
   sidebar-menu-hover: #86e186,
-  sidebar-menu-active: #0cc20c
+  sidebar-menu-active: #ffffff
 );
 
 :root[data-theme='dark'] {
