--- a/src/styles/themes/base.scss
+++ b/src/styles/themes/base.scss
@@ -20,9 +20,9 @@ $colors: (
   actionbar-menu: #ffffff,
   actionbar-menu-hover: #86e186,
   actionbar-menu-active: #0cc20c,
-  sidebar-menu: #909399,
+  sidebar-menu: #ffffff,
   sidebar-menu-hover: #86e186,
-  sidebar-menu-active: #ffffff
+  sidebar-menu-active: #0ed30e
 );
 
 :root {
