--- a/src/directives/ripple/ripple.scss
+++ b/src/directives/ripple/ripple.scss
@@ -18,7 +18,7 @@
     position: absolute;
     left: 0;
     border-radius: 50%;
-    background-color: currentcolor;
+    background-color: currentColor;
     opacity: 0;
     pointer-events: none;
     will-change: height, width, transform, opacity;
@@ -28,12 +28,13 @@
     }
 
     &--in {
-      transition: transform 0.3s linear, opacity 0.1s linear;
+      transition: transform 0.4s cubic-bezier(0, 0.4, 0.82, 0.75),
+        opacity 0.1s linear;
       opacity: var(--ripple-opacity, 0.15);
     }
 
-    &--out {
-      transition: transform 0.3s linear, opacity 0.3s linear;
-    }
+    // &--out {
+    //   transition: transform 0.5s linear, opacity 0.2s linear;
+    // }
   }
 }
