--- a/src/directives/ripple/ripple.scss
+++ b/src/directives/ripple/ripple.scss
@@ -33,8 +33,8 @@
       opacity: var(--ripple-opacity, 0.15);
     }
 
-    // &--out {
-    //   transition: transform 0.5s linear, opacity 0.2s linear;
-    // }
+    &--out {
+      transition: transform 0.4s linear, opacity 0.3s linear;
+    }
   }
 }
