--- a/src/styles/global/reset.scss
+++ b/src/styles/global/reset.scss
@@ -22,5 +22,5 @@ a {
   text-decoration: none;
 }
 
-@import '../themes/base.scss';
-@import '../themes/dark.scss';
+@import './themes/base.scss';
+@import './themes/dark.scss';
