优化显示效果

--- a/src/styles/common/function.scss
+++ b/src/styles/common/function.scss
@@ -1,3 +1,7 @@
+@function getVar($namespace, $name) {
+  @return var(--#{$namespace}-#{$name});
+}
+
 @function getColor($colorName) {
-  @return var(--color-#{$colorName});
+  @return getVar('color', $colorName);
 }
