--- a/src/styles/global/themes/base.scss
+++ b/src/styles/global/themes/base.scss
@@ -31,4 +31,5 @@ $colors: (
   }
   --mz-button-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
     0 3px 6px 2px rgba(60, 64, 67, 0.15);
+  --mz-button-background-color-disabled: rgba(0, 0, 0, 0.12);
 }
