--- a/src/styles/global/themes/dark.scss
+++ b/src/styles/global/themes/dark.scss
@@ -31,4 +31,5 @@ $colors: (
   }
   --mz-button-shadow: 0 1px 2px 0 rgba(192, 196, 204, 0.3),
     0 3px 6px 2px rgba(192, 196, 204, 0.15);
+  --mz-button-background-color-disabled: rgba(255, 255, 255, 0.12);
 }
