--- a/src/styles/global/index.scss
+++ b/src/styles/global/index.scss
@@ -15,7 +15,8 @@
 }
 
 .color-transition {
-  transition: background-color 0.3s linear, color 0.3s linear, fill 0.3s linear;
+  transition: background-color 0.3s linear, color 0.3s linear, fill 0.3s linear,
+    box-shadow 0.3s linear;
 }
 
 .flex-center-space-between {
