--- a/src/styles/global/themes/base.scss
+++ b/src/styles/global/themes/base.scss
@@ -22,7 +22,9 @@ $colors: (
   actionbar-menu-active: #0cc20c,
   sidebar-menu: #ffffff,
   sidebar-menu-hover: #86e186,
-  sidebar-menu-active: #0ed30e
+  sidebar-menu-active: #0ed30e,
+  mz-button-disabled: rgba(0, 0, 0, 0.12),
+  mz-cell-group-list: #ffffff
 );
 
 :root {
@@ -31,5 +33,4 @@ $colors: (
   }
   --mz-button-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
     0 3px 6px 2px rgba(60, 64, 67, 0.15);
-  --mz-button-background-color-disabled: rgba(0, 0, 0, 0.12);
 }
