--- a/src/styles/global/themes/base.scss
+++ b/src/styles/global/themes/base.scss
@@ -16,21 +16,11 @@ $colors: (
   border-extra-light: #f2f6fc,
   body-background: #ffffff,
   hover-background-b: rgba(0, 0, 0, 0.25),
-  hover-background-w: rgba(255, 255, 255, 0.25),
-  actionbar-menu: #ffffff,
-  actionbar-menu-hover: #86e186,
-  actionbar-menu-active: #0cc20c,
-  sidebar-menu: #ffffff,
-  sidebar-menu-hover: #86e186,
-  sidebar-menu-active: #0ed30e,
-  mz-button-disabled: rgba(0, 0, 0, 0.12),
-  mz-cell-group-list: #ffffff
+  hover-background-w: rgba(255, 255, 255, 0.25)
 );
 
 :root {
   @each $name, $color in $colors {
     --color-#{$name}: #{$color};
   }
-  --mz-button-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
-    0 3px 6px 2px rgba(60, 64, 67, 0.15);
 }
