--- a/src/styles/global/themes/dark.scss
+++ b/src/styles/global/themes/dark.scss
@@ -16,22 +16,33 @@ $colors: (
   border-extra-light: #f2f6fc,
   body-background: #303030,
   hover-background-b: rgba(0, 0, 0, 0.25),
-  hover-background-w: rgba(255, 255, 255, 0.25),
-  actionbar-menu: #ffffff,
-  actionbar-menu-hover: #86e186,
-  actionbar-menu-active: #0cc20c,
-  sidebar-menu: #909399,
-  sidebar-menu-hover: #86e186,
-  sidebar-menu-active: #ffffff,
-  mz-button-disabled: rgba(255, 255, 255, 0.12),
-  mz-cell-group-list: #424242
+  hover-background-w: rgba(255, 255, 255, 0.25)
 );
 
 :root[data-theme='dark'] {
   @each $name, $color in $colors {
     --color-#{$name}: #{$color};
   }
-  --mz-button-shadow: 0 1px 2px 0 rgba(192, 196, 204, 0.3),
+  // ActionBar
+  --actionbar__background-color: #{getColor(primary)};
+  --actionbar__font-color: #{getColor(white)};
+  --actionbar-menu__icon-color: #ffffff;
+  --actionbar-menu__icon-color--hover: #86e186;
+  --actionbar-menu__icon-color--active: #0cc20c;
+  // SideBar
+  --sidebar__box-shadow: -5px 0 10px #{getColor(primary)};
+  --sidebar__background-color: #{getColor(primary)};
+  --sidebar__header-icon-color: #{getColor(white)};
+  --sidebar-menu__color: #909399;
+  --sidebar-menu__color--hover: #86e186;
+  --sidebar-menu__color--active: #ffffff;
+  // MZButton
+  --mz-button__background-color: transparent;
+  --mz-button__background-color--disabled: rgba(255, 255, 255, 0.12);
+  --mz-button__box-shadow: 0 1px 2px 0 rgba(192, 196, 204, 0.3),
     0 3px 6px 2px rgba(192, 196, 204, 0.15);
-  --mz-cell-group-background: ;
+  // MZCellGroup
+  --mz-cell-group__list-background-color: #424242;
+  --mz-cell-group__list-box-shadow: 0 1px 2px 0 rgba(192, 196, 204, 0.3),
+    0 3px 6px 2px rgba(192, 196, 204, 0.15);
 }
