--- a/src/styles/global/themes/layout.scss
+++ b/src/styles/global/themes/layout.scss
@@ -1,10 +1,5 @@
-:root {
-  --sidebar-width: 25%;
-  --sidebar-max-width: 256px;
-}
-
 @media screen and (min-width: 1024px) {
   :root {
-    --sidebar-width: var(--sidebar-max-width);
+    --sidebar__width: var(--sidebar__max-width);
   }
 }
