--- a/src/styles/global/themes/base.scss
+++ b/src/styles/global/themes/base.scss
@@ -16,7 +16,9 @@ $colors: (
   border-extra-light: #f2f6fc,
   body-background: #ffffff,
   hover-background-b: rgba(0, 0, 0, 0.25),
-  hover-background-w: rgba(255, 255, 255, 0.25)
+  hover-background-w: rgba(255, 255, 255, 0.25),
+  transiton:
+    'background-color 0.3s linear, color 0.3s linear, fill 0.3s linear, box-shadow 0.3s linear'
 );
 
 :root {
