--- a/src/styles/global/themes/base.scss
+++ b/src/styles/global/themes/base.scss
@@ -10,13 +10,14 @@ $colors: (
   text-regular: #606266,
   text-secondary: #909399,
   text-placeholder: #c0c4cc,
-  border-base: #dcdfe6,
+  border-base: rgba(0, 0, 0, 0.12),
   border-light: #e4e7ed,
   border-lighter: #ebeef5,
   border-extra-light: #f2f6fc,
   body-background: #ffffff,
   hover-background-b: rgba(0, 0, 0, 0.25),
   hover-background-w: rgba(255, 255, 255, 0.25),
+  shadow-rgb: '0,0,0',
   transiton:
     'background-color 0.3s linear, color 0.3s linear, fill 0.3s linear, box-shadow 0.3s linear'
 );
